<?xml version="1.0"?>
<package format="3">
  <name>temp_sens</name>
  <version>0.0.1</version>
  <description>Simulated temperature and humidity sensor with custom message (ROS2 Humble)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>launch</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
</package>
